--- a/.github/workflows/cd.staging.yml
+++ b/.github/workflows/cd.staging.yml
@@ -12,7 +12,7 @@ jobs:
     environment: staging
 
     steps:
-      - name: Deploy to staging server
+      - name: Deploy to staging serverve
         uses: appleboy/ssh-action@v0.1.10
         env:
           APP_STG_PATH: ${{ vars.APP_STG_PATH }}
