--- a/.github/workflows/cd.staging.yml
+++ b/.github/workflows/cd.staging.yml
@@ -12,39 +12,41 @@ jobs:
     environment: staging
 
     steps:
-      - name: Deploy to staging serverve
+      - name: Deploy to staging server
         uses: appleboy/ssh-action@v0.1.10
-        env:
-          APP_STG_PATH: ${{ vars.APP_STG_PATH }}
-          GIT_URL: ${{ vars.GIT_URL }}
-          MINIO_STG_ENDPOINT: ${{ secrets.MINIO_STG_ENDPOINT }}
-          MINIO_STG_ACCESS_KEY: ${{ secrets.MINIO_STG_ACCESS_KEY }}
-          SSH_HOST_STAGING: ${{ secrets.SSH_HOST_STAGING }}
-          APP_STG_PORT: $${{ secrets.APP_STG_PORT }}
-        
         with:
           host: ${{ secrets.SSH_HOST_STAGING }}
           username: ${{ secrets.SSH_USER_NAME_STAGING }}
           key: ${{ secrets.SSH_PRIVATE_KEY_STAGING }}
-          envs: APP_STG_PATH, GIT_URL, MINIO_STG_ENDPOINT, MINIO_STG_ACCESS_KEY, SSH_HOST_STAGING, APP_STG_PORT
-
           script: |
+            # Set environment variables
+            export APP_STG_PATH="${{ vars.APP_STG_PATH }}"
+            export GIT_URL="${{ vars.GIT_URL }}"
+            export MINIO_STG_ENDPOINT="${{ secrets.MINIO_STG_ENDPOINT }}"
+            export MINIO_STG_ACCESS_KEY="${{ secrets.MINIO_STG_ACCESS_KEY }}"
+            export APP_STG_PORT="${{ secrets.APP_STG_PORT }}"
+            export MINIO_STG_SECRET_KEY="${{ secrets.MINIO_STG_SECRET_KEY }}"
+
+            # Check if application path exists
             if [[ -d "/home/ubuntu/${APP_STG_PATH}" ]]; then 
-              cd /home/ubuntu/$APP_STG_PATH
-              sudo docker compose down pacmusic-stg
+              cd /home/ubuntu/${APP_STG_PATH}
+              docker compose down pacmusic-stg
               git pull origin master
             else
-              ssh-keyscan github.com > ~/.ssh/known_hosts
-              git clone $GIT_URL /home/ubuntu/APP_STG_PATH
-              cd /home/ubuntu/$APP_STG_PATH
-            
-               fi
+              mkdir -p /home/ubuntu/${APP_STG_PATH}
+              ssh-keyscan -H github.com >> ~/.ssh/known_hosts
+              git clone $GIT_URL /home/ubuntu/${APP_STG_PATH}
+              cd /home/ubuntu/${APP_STG_PATH}
+            fi
 
-            # If there are any envars update
-            echo "APP_STG_PORT=$APP_STG_PORT" > .env
-            echo "MINIO_STG_ENDPOINT=$MINIO_STG_ENDPOINT" >> .env
-            echo "MINIO_STG_ACCESS_KEY=$MINIO_STG_ACCESS_KEY" >> .env
-            echo "MINIO_STG_SECRET_KEY=$MINIO_STG_SECRET_KEY" >> .env
+            # Update environment variables in .env file
+            echo "APP_STG_PORT=${APP_STG_PORT}" > .env
+            echo "MINIO_STG_ENDPOINT=${MINIO_STG_ENDPOINT}" >> .env
+            echo "MINIO_STG_ACCESS_KEY=${MINIO_STG_ACCESS_KEY}" >> .env
+            echo "MINIO_STG_SECRET_KEY=${MINIO_STG_SECRET_KEY}" >> .env
+
+            # Restart the application
+            docker compose up -d pacmusic-stg
 
       - name: Test endpoint
         run: |
