--- a/.github/workflows/cd-container-registry.yml
+++ b/.github/workflows/cd-container-registry.yml
@@ -12,25 +12,26 @@ jobs:
     steps:
       # Step 1: Checkout repository
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
 
       # Step 2: Login to DockerHub
       - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       # Step 3: Setup Docker buildx
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v3
 
       # Step 4: Build and push images
       - name: Build and push images
-        uses: docker/build-push-action@v4
+        uses: docker/build-push-action@v5
         with:
+          context: ./app
+          file: ./app/Dockerfile
           push: true
-          platforms: linux/amd64
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/pacmusic:${{ github.ref_name }}
             ${{ secrets.DOCKERHUB_USERNAME }}/pacmusic:latest
