--- a/.github/workflows/cd-production.yml
+++ b/.github/workflows/cd-production.yml
@@ -34,7 +34,7 @@ jobs:
         with:
           host: ${{ secrets.SSH_HOST_PRODUCTION }}
           username: ${{ secrets.SSH_USER_NAME_PRODUCTION }}
-          password: ${{ secrets.SSH_PRIVATE_KEY_PRODUCTION }}
+          password: ${{ secrets.SSH_PASS }}
           envs: APP_PROD_PATH, GIT_URL, MINIO_PROD_ENDPOINT, MINIO_PROD_ACCESS_KEY, MINIO_PROD_SECRET_KEY, APP_PROD_PORT,DOCKERHUB_USERNAME, DOCKERHUB_TOKEN, APP_TAG
           script: |
 
