--- a/.github/workflows/cd-production.yml
+++ b/.github/workflows/cd-production.yml
@@ -64,4 +64,4 @@ jobs:
       # Step 3: Test Hit Endpoint
       - name: Test endpoint
         run: |
-          curl ${{ secrets.APP_STG_PATH }}
+          curl ${{ secrets.APP_PROD_PATH }}
