solve test curl prod3

--- a/.github/workflows/cd-production.yml
+++ b/.github/workflows/cd-production.yml
@@ -40,7 +40,7 @@ jobs:
 
             sudo docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_TOKEN
 
-            if [[ -d ${APP_PROD_PATH}" ]]; then 
+            if [[ -d "${APP_PROD_PATH}" ]]; then 
               cd $APP_PROD_PATH
               sudo docker compose down pacmusic-prod
               git pull origin master
