--- a/.github/workflows/cd-production.yml
+++ b/.github/workflows/cd-production.yml
@@ -41,13 +41,13 @@ jobs:
             sudo docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_TOKEN
 
             if [[ -d "${APP_PROD_PATH}" ]]; then 
-              cd $APP_PROD_PATH
+              cd "${APP_PROD_PATH}"
               sudo docker compose down pacmusic-prod
               git pull origin master
             else
               ssh-keyscan github.com > ~/.ssh/known_hosts
-              git clone $GIT_URL $APP_PROD_PATH
-              cd $APP_PROD_PATH
+              git clone "${GIT_URL}" "${APP_PROD_PATH}"
+              cd "${APP_PROD_PATH}"
             fi
 
             echo "DOCKERHUB_USERNAME=${DOCKERHUB_USERNAME}/Pacmusic" > .env
