solve test curl prod11

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: '3'
+# version: '3'
 
 services:
 
@@ -34,7 +34,7 @@ services:
 
 # PROD
   pacmusic-prod:
-    image: "${APP_IMAGE}:${APP_TAG}"
+    image: ${APP_IMAGE}:${APP_TAG}
     container_name: pacmusic-prod
     environment:
       MINIO_ENDPOINT: ${MINIO_PROD_ENDPOINT}
