--- a/.github/workflows/cd-production.yml
+++ b/.github/workflows/cd-production.yml
@@ -51,11 +51,11 @@ jobs:
               cd "${APP_PROD_PATH}"
             fi
 
-            echo "DOCKERHUB_USERNAME=${DOCKERHUB_USERNAME}/Pacmusic" > .env
-            echo "APP_TAG=$APP_TAG" >> .env
-            echo "APP_PROD_PORT=$APP_PROD_PORT" >> .env
-            echo "MINIO_PROD_ENDPOINT=$MINIO_PROD_ENDPOINT" >> .env
-            echo "MINIO_PROD_ACCESS_KEY=$MINIO_PROD_ACCESS_KEY" >> .env
+            echo "DOCKERHUB_USERNAME=${DOCKERHUB_USERNAME}/pacmusic" > .env
+            echo "APP_TAG=${APP_TAG}" >> .env
+            echo "APP_PROD_PORT=${APP_PROD_PORT}" >> .env
+            echo "MINIO_PROD_ENDPOINT=${MINIO_PROD_ENDPOINT}" >> .env
+            echo "MINIO_PROD_ACCESS_KEY=${MINIO_PROD_ACCESS_KEY}" >> .env
             echo "MINIO_PROD_SECRET_KEY=${MINIO_PROD_SECRET_KEY}" >> .env
             
 
